--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/olexanna/Plinor.git"
+    "url": "git+https://github.com/olexanna/Plinor-Test.git"
   },
   "author": "",
   "license": "ISC",
