--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "git+https://github.com/olexanna/Plinor-Test.git"
   },
   "bugs": {
-    "url": "https://github.com/olexanna/Plinor-Test/issues"
+    "url": "https://github.com/olexanna/Plinor-Test.git/issues"
   },
   "homepage": "https://github.com/olexanna/Plinor-Test.git",
   "files": [
